<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/hobbies_fragment"
    tools:context=".HobbiesFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints,UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="765dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:backgroundTint="#F200BCD4"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_hobbies_img"
                    tools:ignore="ImageContrastCheck"></ImageView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginTop="250dp"
                android:textSize="30sp"
                android:text="@string/hobbies"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="285dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="List of the hobbies"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#F7CFD0D1">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="32dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/ic_baseline_arrow_back_24"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textSize="15sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="260dp"
                    android:background="@drawable/ic_baseline_more_vert" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="340dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="#E1DFDF"
                android:orientation="vertical">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:rowCount="6"
                    android:columnCount="2">

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@color/white"
                            android:src="@mipmap/img_football"
                            android:contentDescription="@null">
                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:text="@string/Football"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@color/white"
                            android:src="@mipmap/img_desing"
                            android:contentDescription="@null">
                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:text="@string/designing"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@color/white"
                            android:src="@mipmap/img_typing"
                            android:contentDescription="@null">
                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:text="@string/typing"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@color/white"
                            android:src="@mipmap/img_reading"
                            android:contentDescription="@null">
                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:text="@string/reading"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@color/white"
                            android:src="@mipmap/img_volleyball"
                            android:contentDescription="@null">
                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:text="@string/volleyball"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@color/white"
                            android:src="@mipmap/img_music"
                            android:contentDescription="@null">
                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:text="@string/music"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@color/white"
                            android:src="@mipmap/img_watching"
                            android:contentDescription="@null">
                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:text="@string/movies"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@color/white"
                            android:src="@mipmap/img_swimming"
                            android:contentDescription="@null">
                        </ImageView>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:text="@string/swimming"/>
                    </LinearLayout>
                </GridLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</FrameLayout>